# test

./: README.md  pyproject.toml
src/package_1/module_2/: module_2.py
src/package_2/: example.py
src/package_2/module_2a/: example.py
